# podcast-rag

./: .env.sample  .gitignore  app.py  embeddings.py  pyproject.toml
